--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-success-alert>
-
-</app-success-alert>
-<app-warning-alert></app-warning-alert>
+<div class="container">
+    <!--<app-assignment2></app-assignment2>-->
+    <app-assignment3></app-assignment3>
+</div>
